Added a runner listener that displays a progress bar

--- a/app/src/main/res/layout/content_algorithm_launcher.xml
+++ b/app/src/main/res/layout/content_algorithm_launcher.xml
@@ -8,6 +8,16 @@
     tools:context=".AlgorithmLauncher"
     tools:showIn="@layout/activity_algorithm_launcher">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
